update rqd files

--- a/css/style.css
+++ b/css/style.css
@@ -1,14 +1,24 @@
 *, *:before, *:after {
   box-sizing: border-box;
 }
+
+/*****main components*****/
+
 body {
   background-color: #6F6F6F;
   font-family: SF Pro text, sans-serif;
   font-size: 10px;
   }
-/*Heading*/
+.container {
+  background-color: #EFEFF4;
+  margin: 0 auto;
+  width: 375px;
+}
+
+/*****Heading*****/
 h1 {
   display: inline-block;
+  color: #000000;
   font-size: 1.75em;
   font-weight: 700;
   line-height: 1.5em;
@@ -17,43 +27,51 @@ h1 {
   vertical-align: text-bottom;
 }
 h2 {
-  font-size: 1.75em;
-  font-weight: 400;
-}
-h3 {
-  font-size: 1.5em;
   font-weight: 400;
   color: #8C8C8C;
 }
+
+/*****Nav & classes*****/
 nav {
   background-color: #F8F8F8;
+  font-size: 1.75em;
   margin: 0 auto;
   position: fixed;
   width: 375px;
+  height: 142px;
   border-bottom: 1px solid #979797;
 }
-/*Class*/
-.arrow {
- display: inline-block;
- text-align: right;
- width: 10%;
- padding: 9px 0;
- vertical-align: top;
- }
+nav h1 {
+  width: 50%;
+  font-size: inherit;
+  vertical-align: baseline;
+
+}
+img {
+  padding-bottom: 10px;
+}
 .back {
-  margin: 22px 5px;
+  display: inline-block;
+  margin: 22px 0px 16px 15px;
+  color: #007AFF;
+  width: 20%;
 }
-.bottom{
-  background-color: #F8F8F8;
-  margin: 0 auto;
-  position: fixed;
-  width: 375px;
-  bottom: 0;
-  border-bottom: 1px solid #979797;
-  padding: 5px 0 5px;
+.search {
+  width: 359px;
+  margin: 0px 8px 10px 8px;
+  height: 36px;
+  background-color: #EBEBEC;
+  color: #8E8E93;
+  vertical-align: text-bottom;
+  border-radius: 10px;
+  padding: 8px;
 }
+/*****Bus Info section & classes*****/
+        /*List info below*/
 .bus-info {
-  padding-top: 70px;
+  padding-top: 142px;
+  overflow: scroll;
+  height: 615px;
   }
 .bus-info h1 {
    color: #007AFF;
@@ -67,37 +85,72 @@ nav {
 .bus-info h1.out {
   color: #FF3B30;
 }
-.container {
-  background-color: #EFEFF4;
-  margin: 0 auto;
-  width: 375px;
-}
-.eta {
-  display: inline-block;
-  width: 10%;
-  text-align: center;
-  vertical-align: top;
-}
-.eta h2 {
-  font-weight: 600;
-}
-.specs{
-  height: 60px;
-  padding: 10px 0px 0px 10px;
+
+/*****List and Items*****/
+  /*In order by usage*/
+ul {
+  height: 50px;
+  padding: 5px 10px;
   background-color: #ffffff;
   border-bottom: 1px solid #979797;
-  }
-.specs:active {
+}
+ul:active {
   background-color:#EBEBEC;
  }
+li {
+  display: inline-block ;
+  font-size: 1.75em;
+  line-height: 1.3em;
+  font-weight: 400;
+}
 .line {
-display: inline-block;
-width: 75%;
+  width: 50%;
 }
-.tab {
-  display: inline-block;
-  text-align: center;
-  width: 32%;
+.nxt {
+  width: 34%;
+  text-align: right;
 }
-.tab:active {
-  background-color:#EBEBEC;
+.arrow {
+ text-align: right;
+ font-size: inherit;
+ padding: 12px 5px 9px 0;
+ width: 15%;
+ vertical-align: top;
+ column-span: all;
+ float: right;
+ }
+.dest {
+  font-size: 1.5em;
+  color: #8C8C8C;
+  width: 50%;
+}
+.frq {
+  font-size: 1.5em;
+  color: #8C8C8C;
+  width: 34%;
+  text-align: right;
+}
+
+/****Bottom Info and classes****/
+ .bottom{
+   background-color: #F8F8F8;
+   margin: 0 auto;
+   width: 375px;
+   bottom: 0;
+   border-bottom: 1px solid #979797;
+   padding: 5px 0 5px;
+ }
+ .tab {
+   display: inline-block;
+   text-align: center;
+   width: 32%;
+   color: #8C8C8C;
+ }
+ .tab:active {
+   background-color:#EBEBEC;
+ }
+ .tab i {
+   font-size: 3em;
+   #selected {
+     color: #007AFF;
+   }
